--- a/cw_styles.css
+++ b/cw_styles.css
@@ -14,27 +14,31 @@
    Filename: cw_styles.css
 
 */
-
-
 /* Structural Styles */
-html{
+/* set background color of evreything behind the body to an rgb value that looks like a light gray color. */
+html {
     background-color: rgb(151, 151, 151);
 }
 
-body{
+/* This sets the background color to an rgb value and sets the font to Verdana sans-serif. */
+body {
     background-color: rgb(180, 180, 223);
     font-family: Verdana, Geneva, sans-serif;
 }
 
-h1, h2 {
+/*Set font weight to normal for both h1 and h2 tags in the entire website.  */
+h1,
+h2 {
     font-weight: normal;
 }
 
-nav a{
+/* The nav a selector affects the content in a nav tag that is in a "a" tag. This takes the line away from the link. */
+nav a {
     text-decoration: none;
 }
 
-footer{
+/* This affects content in the footer tag and changes the text color to white and background color to an rgb value. Then sets the font size to 0.8em and aligns it horizontally. Finally it puts 1px of padding on top and 1px on the bottom. */
+footer {
     color: white;
     background-color: rgb(101, 101, 101);
     font-size: 0.8em;
@@ -42,32 +46,101 @@ footer{
     padding: 1px 0px 1px 0px;
 }
 
-
+/* This affects the headers that are direct children of the body and makes the background color an rgb value. */
 /* Body Header Styles */
+body>header {
+    background-color: rgb(97, 97, 211);
+}
 
+/* This affects the h1's that are direct children of header's that are direct chldren of the body. This makes the font-size 4vw and the color to an rgba value which includes the opacity of the color. Then makes the font-family limelight and cursive and the margins are set to 20px. */
+body>header>h1 {
+    font-size: 4vw;
+    color: rgba(255, 255, 255, 0.8);
+    font-family: Limelight, cursive;
+    margin: 20px;
+}
 
+/* This affects span thats a direct child of h1 thats a direct child of the header thats a direct child of the body. This changes the text color to an rgba value. */
+body>header>h1>span {
+    color: rgba(255, 255, 255, 0.4);
+}
 
-
+/* This affects the content thats in the mainLinks id. Changes the top and bottom padding to 5 pixels. */
 /* Navigation Styles */
+#mainLinks {
+    padding: 5px 0px 5px 0px;
+}
 
+/* This affects links that have been visted or not visited that are in the id of main links. Makes the color white.*/
+#mainLinks a:visited,
+#mainLinks a:link {
+    color: white;
+}
 
-
-
+/* This affects the links that are hovered on and that are active and has the id of mainLinks. This sets the color to an rgba value with the opacity of 0.8. Then a background-color of an rgba value with an opacity of 0.5. */
+#mainLinks a:active,
+#mainLinks a:hover {
+    color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(51, 51, 51, 0.5);
+}
 
 /* Outline Styles */
+#outline a {
+    color: rgb(51, 51, 51);
+    font-size: 0.8em;
+}
 
+#outline>h1 {
+    text-align: center;
+}
 
+#outline ol {
+    line-height: 2em;
+    margin: 0px 5px 0px 5px;
+    list-style-type: upper-roman;
+}
 
+#outline ol ol {
+    list-style-type: upper-alpha;
+}
+
+#outline a:visited,
+#outline a:link {
+    color: rgb(101, 101, 101);
+}
+
+#outline a:active,
+#outline a:hover {
+    color: rgb(97, 97, 211);
+    text-decoration: underline;
+}
 
 /* Section Styles */
+section {
+    background-color: rgb(220, 220, 220);
+}
 
-
-
+section header h1 {
+    font-size: 2.2em;
+    padding-left: 10px;
+}
 
 /* Article Styles */
+article h2 {
+    font-size: 1.4em;
+}
 
-
-
+article p:first-of-type:first-letter {
+    vertical-align: baseline;
+    font-size: 2em;
+}
 
 /* Aside Styles */
+aside {
+    font-size: 0.9em;
+}
 
+aside h1 {
+    font-size: 1.4em;
+    text-align: center;
+}
